--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,49 @@
-output
-test_output
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+.venv/
+env/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Output directories
+output/
+output_clips/
+test_output/
+
+# Generated files
+*.mp4
+*.webm
+*.srt
+*.txt
+*.wav
+
+# System files
+.DS_Store
+Thumbs.db
