--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ openai-whisper>=20231117
 torch>=2.0.0
 pysrt>=1.1.2
 ffmpeg-python>=0.2.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+aiofiles>=23.2.0
 
