--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,39 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "clippy-video"
+version = "0.1.0"
+description = "A Python tool for extracting and processing video clips to create engaging, social media-ready content"
+readme = "README.md"
+requires-python = ">=3.7"
+license = {text = "MIT"}
+authors = [
+    {name = "Owain Lewis", email = "owain@owainlewis.com"}
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Multimedia :: Video",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+dependencies = [
+    "yt-dlp>=2023.11.16",
+    "openai-whisper>=20231117",
+    "torch>=2.0.0",
+    "pysrt>=1.1.2",
+    "ffmpeg-python>=0.2.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/owainlewis/clippy"
+
+[project.scripts]
+clippy = "clippy.cli:main"
 
 [tool.setuptools]
 packages = ["clippy"]
